# hw06-PoohTheWinnie

./: .buildinfo  Makefile  README.html  README.md  _config.yml  conf.py  genindex.html  pyproject.toml  setup.cfg  setup.py
.doctrees/: index.doctree
.doctrees/.pytest_cache/: README.doctree
.github/workflows/: book.yml
.ipynb_checkpoints/: index-checkpoint.ipynb  setup-checkpoint.cfg
.pytest_cache/: README.html
_build/html/: hw06-description.html  index.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  hw06-description.doctree
_build/html/_sources/: README.md
_build/jupyter_execute/: index.ipynb  index.py
ligotools/: utils.py
ligotools/.ipynb_checkpoints/: __init__-checkpoint.py  utils-checkpoint.py
ligotools/tests/: test_readligo.py  tests_readligo.py
