[metadata]
name = ligotools
version = 0.0.1
author = Ligo Scientific Collaboration (LSC) and Winston Cai
author_email = winstoncai@berkeley.edu
description = Ligotoosl package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCB-stat-159-s22/hw06-PoohTheWinnie
project_urls =
    Bug Tracker = https://github.com/UCB-stat-159-s22/hw06-PoohTheWinnie
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ligotools
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src